tests/rosetta/out/Swift/averages-mode.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:12Z
var arr1 = [2, 7, 1, 8, 2]
var counts1: [Int: Int] = []
var keys1: [Int] = [Any]()
var i = 0
while i < arr1.count {
    let v = arr1[i]
    if counts1.keys.contains(v) {
        counts1[v] = counts1[v]! + 1
    }
    else {
        counts1[v] = 1
        keys1 = keys1 + [v]
    }
    i = i + 1
}
var max1 = 0
i = 0
while i < keys1.count {
    let k = keys1[i]
    let c = counts1[k]!
    if c > max1 {
        max1 = c
    }
    i = i + 1
}
var modes1: [Int] = [Any]()
i = 0
while i < keys1.count {
    let k = keys1[i]
    if counts1[k]! == max1 {
        modes1 = modes1 + [k]
    }
    i = i + 1
}
print(String(modes1))
var arr2 = [2, 7, 1, 8, 2, 8]
var counts2: [Int: Int] = []
var keys2: [Int] = [Any]()
i = 0
while i < arr2.count {
    let v = arr2[i]
    if counts2.keys.contains(v) {
        counts2[v] = counts2[v]! + 1
    }
    else {
        counts2[v] = 1
        keys2 = keys2 + [v]
    }
    i = i + 1
}
var max2 = 0
i = 0
while i < keys2.count {
    let k = keys2[i]
    let c = counts2[k]!
    if c > max2 {
        max2 = c
    }
    i = i + 1
}
var modes2: [Int] = [Any]()
i = 0
while i < keys2.count {
    let k = keys2[i]
    if counts2[k]! == max2 {
        modes2 = modes2 + [k]
    }
    i = i + 1
}
print(String(modes2))
